# sketch2nav

./: LICENSE  README.md
cad/parts/: 2DCMotorBridge.SLDPRT  2batteryPack.SLDPRT  basePlate.SLDPRT  carALL.SLDASM  esp32controller.SLDPRT  motorHolder.SLDPRT  smallDCMotor.SLDPRT  topPlate.SLDPRT  topPlate.STL  ~$motorHolder.SLDPRT
cad/solidworks/assem/: carALL.SLDASM
cad/solidworks/assem/carAssemblyV1/: carAssemblyV1.gltf
cad/solidworks/parts/: 2batteryPack.SLDPRT  basePlate.SLDPRT  esp32controller.SLDPRT  topPlate.SLDPRT  wheel.SLDPRT
cad/stl/: 2DCMotorBridge.STL  2batteryPack.STL  basePlate.STL  esp32controller.STL  motorHolder.STL  smallDCMotor.STL  wheel.STL
ros2ws/install/: local_setup.sh  setup.sh
ros2ws/install/demo_gazebo/share/demo_gazebo/: package.bash  package.dsv  (+3 more)
ros2ws/install/sketch2nav_bringup/share/sketch2nav_bringup/: package.bash  package.dsv  package.sh  package.xml  package.zsh
ros2ws/install/sketch2nav_bringup/share/sketch2nav_bringup/worlds/: empty.sdf
ros2ws/log/: latest_build
ros2ws/src/demo_gazebo/: package.xml  setup.cfg  setup.py
ros2ws/src/demo_gazebo/launch/: sim.launch.py
ros2ws/src/demo_teleop/: package.xml  setup.cfg  setup.py
ros2ws/src/demo_teleop/demo_teleop/: teleop.py
ros2ws/src/install/: local_setup.sh  setup.sh
ros2ws/src/log/: latest_build
ros2ws/src/sketch2nav_bringup/: setup.cfg  setup.py
ros2ws/src/sketch2nav_bringup/launch/: bringup.launch.py
ros2ws/src/sketch2nav_control/: setup.cfg  setup.py
ros2ws/src/sketch2nav_control/sketch2nav_control/: pure_pursuit.py
webUI/: sketch2navUI.html
(+18 files in other folders)
